trunk/Archive2/83/fb102ca8eb9c80/output
main.cpp:6:4: error: stray '\303' in program
    Questo codice è sbagliato.
    ^
main.cpp:6:4: error: stray '\250' in program
main.cpp: In function 'int main()':
main.cpp:6:4: error: 'Questo' was not declared in this scope
main.cpp:6:11: error: expected ';' before 'codice'
    Questo codice è sbagliato.
           ^
main.cpp: At global scope:
main.cpp:9:1: error: 'voi' does not name a type
 voi ePureQuesto() {
 ^
